--- a/[BTVN] session 2-10 cccd.html
+++ b/[BTVN] session 2-10 cccd.html
@@ -65,7 +65,7 @@
                     for="Gender"
                     >Căn cước công dân mới</label
                   >
-                  <input type="radio" name="Gender" id="Gender" value="old" /><label
+                  <input type="radio" name="idtype" id="idtype" value="old" /><label
                     for="Gender"
                     >Căn cước công dân cũ</label</td></tr>
 <tr><td><label for="ethnic">Dân tộc:</label></td>
