--- a/[BTVN] session 2-3 tạo bảng sử dụng thuộc tính rowspan.html
+++ b/[BTVN] session 2-3 tạo bảng sử dụng thuộc tính rowspan.html
@@ -15,6 +15,7 @@
     <main>
       <section>
         <table border="1cm" align="center" style="border-spacing: 10px">
+          <!-- <table border="1cm" align="center" cellspacing: 10px> -->
           <thead>
             <tr>
               <th>STT</th>
@@ -32,8 +33,8 @@
               <td>18</td>
               <td>NguyenVanA@gmail.com</td>
               <td>Hoạt Động</td>
-              <td><button class="btn">Sửa</button></td>
-              <td><button class="btn">Xóa</button></td>
+              <td><button>Sửa</button></td>
+              <td><button>Xóa</button></td>
               <td rowspan="4">Xóa tất cả</td>
             </tr>
             <tr>
