--- a/[BTVN] session 2-11 nhóm kín.html
+++ b/[BTVN] session 2-11 nhóm kín.html
@@ -22,10 +22,12 @@
             </thead>
             <hr />
             <tbody>
-              <tr>
-                <td><label for="name">Họ và tên:</label></td>
-                <td><input type="text" id="name" name="name" /></td>
-              </tr>
+              <div>
+                <tr>
+                  <td><label for="name">Họ và tên:</label></td>
+                  <td><input type="text" id="name" name="name" /></td>
+                </tr>
+              </div>
               <tr>
                 <td><label for="dateofbirth">Ngày sinh:</label></td>
                 <td>
@@ -57,7 +59,7 @@
                     name="tel"
                     id="tel"
                     pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
-                    placeholder="1111-111-1111"
+                    placeholder="011-11-111"
                   />
                 </td>
               </tr>
