--- a/[BTVN] session 2-9 thông tin sinh viên.html
+++ b/[BTVN] session 2-9 thông tin sinh viên.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        th,
-        td {
-          padding: 1px;
-          text-align: left;
-        }
-      </style>
+      th,
+      td {
+        padding: 1px;
+        text-align: left;
+      }
+    </style>
   </head>
   <body>
     <main>
@@ -18,63 +18,111 @@
         <h2>Thông tin sinh viên</h2>
         <hr />
         <form action="portal.rikkei.edu.vn" method="post">
-        <table >
-            <tr><td><label for="name">Họ và tên:</label></td>
-            <td><input type="text" id="name" name="name" /></td></tr>
-        <tr><td><label for="Email">Email:</label></td>
-        <td><input type="email" id="email" name="Email" /></td></tr>
-        <tr><td><label for="date">Ngày sinh:</label></td>
-        <td><input type="date" id="date" name="date of birth" /></td></tr>
-        <tr><td><label for="Gender">Giới tính:</label></td>
-        <td><input type="radio" name="Gender" id="Gender" value="Male" /><label
-            for="Gender"
-            >Nam</label
-          >
-          <input type="radio" name="Gender" id="Gender" value="Female" /><label
-            for="Gender"
-            >Nữ</label</td></tr>
-        <tr><td><label for="tel">Số điện thoại:</label></td>
-        <td><input
-            type="tel"
-            id="tel"
-            name="tel"
-            pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
-            placeholder="011-11-111"
-          /></td></tr>
-          <tr><td> <label for="Major">Chuyên ngành:</label></td>
-        <td><input type="text" name="Major" id="Major" /></td></tr>
-        <tr><td><label for="years">Năm nhập học:</label></td>
-        <td><input
-            type="number"
-            id="years"
-            name="năm nhập học"
-            min="1900"
-            max="2900"
-            step="1"
-          /></td></tr>
-        <tr><td><label for="GPA">Điểm GPA:</label></td>
-        <td><input
-            type="number"
-            id="GPA"
-            name="GPA"
-            min="1900"
-            max="2900"
-            step="1"
-          /></td></tr>
-          <tr><td><label for="address">Địa chỉ:</label></td>
-        <td><textarea name="address" id="address" cols="25" rows="3"></textarea
-            ></td></tr>
-            <tr><td><label for="class"></label>Lớp học:</td>
-            <td><select name="class" id="class">
-                <option value="class 1">Lớp 1</option>
-                <option value="class 2">Lớp 2</option>
-                <option value="class 3">Lớp 3</option>
-            </select></td></tr>
-            <tr><td><label for="date">Ngày đăng ký học:</label></td>
-            <td><input type="datetime-local" name="Ngày đăng ký học" id="date"></td></tr>
-            <tr><td><button type="submit" value="send">Gửi thông tin</button></td></tr>
-    </table>
-</form>
+          <table>
+            <tr>
+              <td><label for="name">Họ và tên:</label></td>
+              <td><input type="text" id="name" name="name" /></td>
+            </tr>
+            <tr>
+              <td><label for="Email">Email:</label></td>
+              <td><input type="email" id="email" name="Email" /></td>
+            </tr>
+            <tr>
+              <td><label for="date">Ngày sinh:</label></td>
+              <td><input type="date" id="date" name="date of birth" /></td>
+            </tr>
+            <tr>
+              <td><label for="Gender">Giới tính:</label></td>
+              <td>
+                <input type="radio" name="Gender" id="Gender" value="Male"/><label
+                  name="Male"
+                  for="Gender"
+                  >Nam</label
+                ><input type="radio" name="Gender" id="Gender" value="Female"/><label
+                  name="Female"
+                  for="Gender"
+                  >Nữ</label
+                >
+              </td>
+            </tr>
+            <tr>
+              <td><label for="tel">Số điện thoại:</label></td>
+              <td>
+                <input
+                  type="tel"
+                  id="tel"
+                  name="tel"
+                  pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+                  placeholder="011-11-111"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td><label for="Major">Chuyên ngành:</label></td>
+              <td><input type="text" name="Major" id="Major" /></td>
+            </tr>
+            <tr>
+              <td><label for="years">Năm nhập học:</label></td>
+              <td>
+                <input
+                  type="number"
+                  id="years"
+                  name="năm nhập học"
+                  min="1900"
+                  max="2900"
+                  step="1"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td><label for="GPA">Điểm GPA:</label></td>
+              <td>
+                <input
+                  type="number"
+                  id="GPA"
+                  name="GPA"
+                  min="1900"
+                  max="2900"
+                  step="1"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td><label for="address">Địa chỉ:</label></td>
+              <td>
+                <textarea
+                  name="address"
+                  id="address"
+                  cols="25"
+                  rows="3"
+                ></textarea>
+              </td>
+            </tr>
+            <tr>
+              <td><label for="class"></label>Lớp học:</td>
+              <td>
+                <select name="class" id="class">
+                  <option value="class 1">Lớp 1</option>
+                  <option value="class 2">Lớp 2</option>
+                  <option value="class 3">Lớp 3</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td><label for="date">Ngày đăng ký học:</label></td>
+              <td>
+                <input
+                  type="datetime-local"
+                  name="Ngày đăng ký học"
+                  id="date"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td><button type="submit" value="send">Gửi thông tin</button></td>
+            </tr>
+          </table>
+        </form>
       </section>
     </main>
   </body>
